# SDL-Input

./: .gitignore  LICENSE  README.md
sdlinputwrapper/: CMakeLists.txt  array.cpp  array.h  callback.cpp  callback.h  context.cpp  context.h  device.cpp  device.h  inputaction.h  inputcontext.cpp  inputcontext.h  inputdevice.cpp  inputdevice.h  interface.cpp  interface.h  keyboardinterface.cpp  keyboardinterface.h  mouseinterface.cpp  mouseinterface.h  processor.cpp  processor.h  sdli_definitions.cpp  sdli_definitions.h  sdlinputwrapper.h  stub.h
sdlinputwrapper/data/: framestate.cpp  framestate.h  sdli_axis.cpp  sdli_axis.h
sdlinputwrapper/samples/: CMakeLists.txt  processor.h  samples.cpp
sdlinputwrapper/samples/binding/: CMakeLists.txt  sample-binding.cpp
sdlinputwrapper/samples/mapping/: CMakeLists.txt  sample-mapping.cpp
sdlinputwrapper/samples/usage/: CMakeLists.txt  sample-usage.cpp
sdlinputwrapper/sdlinputwrapper-tests/: CMakeLists.txt  inputaction.h  inputtestoracle.cpp  inputtestoracle.h  main.cpp  oracle_inputdevice.cpp  oracle_inputdevice.h  sdl_testenviroment.cpp  sdl_testenviroment.h  tests.cpp  tests_device.cpp  tests_indexmap.cpp  tests_util.cpp  tests_util.h
sdlinputwrapper/util/: CMakeLists.txt  array.cpp  array.h  indexmap.cpp  indexmap.h  linearallocator.cpp  linearallocator.h
